--- a/file tex/foundamentals.tex
+++ b/file tex/foundamentals.tex
@@ -90,6 +90,23 @@ Foundamentals
 
 \section{Concetti di Base della Programmazione}
 
+
+La programmazione ad oggetti (Object-Oriented Programming, OOP) è un modo di scrivere software organizzando tutto attorno a \textbf{oggetti}. Un oggetto è un “pacchetto” che contiene sia dati sia il codice che li gestisce.  
+L’idea è di modellare le cose del mondo reale (utente, auto, file, ecc.) come entità autonome che sanno fare qualcosa e che collaborano tra loro.
+
+I concetti chiave sono:
+
+\begin{itemize}
+    \item \textbf{Classi}: i progetti degli oggetti, cioè gli stampi da cui nascono.
+    \item \textbf{Oggetti}: le istanze reali create dalle classi.
+    \item \textbf{Incapsulamento}: tieni insieme dati e funzioni, evitando che tutto sia accessibile in giro a caso.
+    \item \textbf{Ereditarietà}: una classe può estendere un’altra e “prendersi” caratteristiche e comportamenti.
+    \item \textbf{Polimorfismo}: oggetti diversi possono rispondere allo stesso metodo in modi differenti.
+\end{itemize}
+
+In pratica, OOP ti aiuta a tenere il codice più ordinato, modulare e facile da mantenere, perché smetti di gestire mille variabili sparse e inizi a far lavorare insieme oggetti che si comportano come mini-componenti.
+
+
 \subsection{Variabili e Tipi di Dato}
 Le variabili rappresentano porzioni di memoria che contengono valori. Ogni variabile ha un tipo che stabilisce:
 \begin{itemize}
